--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -714,4 +714,25 @@
   display: none;
 }
 
+/* / scrollbar style start here / */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #ccc;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #748EFF;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-button {
+  height: 50px;
+}
+
+/* / scrollbar style end here / */
+
 /*# sourceMappingURL=popup.css.map */
