--- a/assets/scss/_mixins.scss
+++ b/assets/scss/_mixins.scss
@@ -123,7 +123,7 @@
 }
 @mixin propertyTitle {
     font-family: 'Raleway', sans-serif;
-    font-weight: bold;
+    font-weight: 900;
     font-size: 16px;
     line-height: 19px;
     color: $Black;
@@ -133,7 +133,7 @@
     border-radius: 6px;
     box-shadow: 0px 0px 6px rgba(#000000, 16%);
     height: 83px;
-    width: 185px;
+    width: 175px;
     display: flex;
     align-items: center;
     justify-content: center ;
