--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -467,6 +467,14 @@
   line-height: 19px;
   color: #241F1F;
 }
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .formula-container {
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: normal;
+  font-family: "Raleway", sans-serif;
+  color: #241F1F;
+}
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container {
   display: flex;
   align-items: center;
