--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -301,6 +301,13 @@
                                         }
                                     }
                                 }
+                                .unit{
+                                    .unit-info{
+                                        img{
+                                            cursor: pointer;
+                                        }
+                                    }
+                                }
                         }
                         .evalute-btn{
                             text-align: center;
