--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -439,6 +439,9 @@
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property_details .details-container div div select {
   width: 177px;
 }
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property_details .details-container .unit div:last-child {
+  margin: 0px;
+}
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property_details .details-container .unit .unit-info img {
   cursor: pointer;
 }
