--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -302,6 +302,11 @@
                                     }
                                 }
                                 .unit{
+                                    div{
+                                        &:last-child{
+                                            margin: 0px;
+                                        }
+                                    }
                                     .unit-info{
                                         img{
                                             cursor: pointer;
