add note: style-italic

--- a/assets/css/popup.css
+++ b/assets/css/popup.css
@@ -479,6 +479,7 @@
   color: white;
   padding: 5px;
   border-radius: 6px;
+  font-family: "Raleway", sans-serif;
 }
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .increase-rate-container {
   margin-bottom: 10px;
@@ -486,6 +487,25 @@
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .increase-rate-container div button {
   background-color: #748EFF;
   color: white;
+}
+.credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .increase-rate-container-heading {
+  background-color: #ffffff;
+  border-radius: 6px;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.16);
+  height: 83px;
+  width: 175px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: auto;
+  width: auto;
+  display: block;
+  margin-bottom: 10px;
+  padding: 5px;
+  font-style: italic;
+  font-size: 14px;
+  font-family: "Raleway", sans-serif;
 }
 .credifana .realtor-property-details #pills-tabContent #pills-property-details .property-details-wrapper #property-api-data .api-data .data-container {
   display: flex;
