--- a/assets/scss/_popup.scss
+++ b/assets/scss/_popup.scss
@@ -338,6 +338,7 @@
                             color: white;
                             padding: 5px;
                             border-radius: 6px;
+                            font-family: "Raleway", sans-serif;
                         }
                         .increase-rate-container{
                             margin-bottom: 10px;
@@ -347,6 +348,17 @@
                                     color: white;
                                 }
                             }
+                        }
+                        .increase-rate-container-heading{
+                            @include apiDataBlock;
+                            height: auto;
+                            width: auto;
+                            display: block;
+                            margin-bottom: 10px;
+                            padding: 5px;
+                            font-style: italic;
+                            font-size: 14px;
+                            font-family: "Raleway", sans-serif;
                         }
                         .api-data{
                             .data-container{
